crates/oxc_css_parser/tests/error/qualified-rule/missing-ending.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `}`, but found `<eof>`
  ┌─ missing-ending.css:2:1
  │
2 │ 
  │ ^


